--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'androidx.core:core-ktx:0.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation "android.arch.work:work-runtime:$work_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
