--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'androidx.core:core-ktx:0.3'
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation "android.arch.work:work-runtime:$work_version"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
